# stock_13f_screener-

./: README.md  README_conda.md  app.py  pyproject.toml
docs/: ARCHITECTURE.md
examples/: sample_13f_info_table.xml
src/stock_13f_screener/: __init__.py  analytics.py  cli.py  config.py  cusip.py  example_data.py  fetch_policy.py  logging_setup.py  managers.py  models.py  openfigi_client.py  parquet_store.py  parse_13f.py  resolver.py  sec_download.py  streamlit_app.py
tests/: test_analytics.py  test_cusip.py  test_parse_13f.py  test_store.py
