[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "stock-13f-screener"
version = "0.1.0"
description = "Local SEC 13F institutional holdings screener with OpenFIGI CUSIP mapping, ParquetDB storage, and Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bryce Chambers" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.1",
  "lxml>=5.2",
  "loguru>=0.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "parquetdb>=1.0.1",
  "polars>=1.0",
  "pyarrow>=16.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "requests>=2.32",
  "rich>=13.7",
  "sec-edgar-downloader>=5.1.0",
  "streamlit>=1.36",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "radon>=6.0",
]

[project.scripts]
stock13f = "stock_13f_screener.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_13f_screener"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
